# tauri-shadcn-tailwind-template

./: .gitignore  DEVELOPMENT.md  README.md  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
scripts/: tauri-dev.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/src/: main.rs
